--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
-    "next": "latest",
+    "next": "^12.2.0",
     "passport": "^0.6.0",
     "passport-oauth2-refresh": "^2.1.0",
     "passport-orcid": "^0.0.4",
