--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "react-iframe": "^1.8.5",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-svg": "^15.1.11",
+    "react-twitter-embed": "^4.0.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
