--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-card-flip": "^1.1.6",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-hook-form": "^7.42.1",
     "react-iframe": "^1.8.5",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
